WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98182
REGRESSION (
r130091
): Scroll wheel no longer scrolls within div
https://bugs.webkit.org/show_bug.cgi?id=98182
Summary
REGRESSION (r130091): Scroll wheel no longer scrolls within div
Kevin M. Dean
Reported
2012-10-02 11:34:45 PDT
A div that needs to scroll no longer scrolls when using the scroll wheel. Still scrolls when dragged or clicking in the scroll bar area.
Attachments
Patch
(1.57 KB, patch)
2012-10-02 16:21 PDT
,
Beth Dakin
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2012-10-02 16:16:56 PDT
I see the bug. Patch forthcoming. Thanks for reporting this!
Radar WebKit Bug Importer
Comment 2
2012-10-02 16:17:50 PDT
<
rdar://problem/12417503
>
Beth Dakin
Comment 3
2012-10-02 16:21:14 PDT
Created
attachment 166772
[details]
Patch
Beth Dakin
Comment 4
2012-10-02 16:23:21 PDT
Thanks Simon! Fixed:
http://trac.webkit.org/changeset/130229
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug