https://bugs.webkit.org/show_bug.cgi?id=98182 REGRESSION (r130091): Scroll wheel no longer scrolls within div

Reviewed by Simon Fraser.

Forgot to initialize m_nonFastScrollableRegion in this copy
constructor.
* page/scrolling/ScrollingStateScrollingNode.cpp:
(WebCore::ScrollingStateScrollingNode::ScrollingStateScrollingNode):



Canonical link: https://commits.webkit.org/116228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130229 268f45cc-cd09-0410-ab3c-d52691b4dbfc